<resources>
    <string name="app_name">SiGizi</string>
    <string name="signup">SignUp Now</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login</string>
    <string name="name">Indriyani Saputri</string>
    <string name="greeting">Halo,</string>
    <string name="logout">Keluar</string>
    <string name="empty_image_warning">Please select an image first</string>
    <string name="title_menu_1">Pantau Perkembangan buah hati</string>
    <string name="deskripsi">deskripsi</string>
    <string name="nama">Indriyani Saputri</string>
    <string name="title_menu_3">Forum Ibu</string>
    <string name="title_menu_2">Edukasi Nutrisi Ibu</string>
    <string name="desc_menu_1">Pantau Catat Perkembangan Buah Hati Bunda mulai dari berat badan, tinggi badan, dan ciri-ciri fisik mereka.</string>
    <string name="desc_menu_2">Kami menyiapkan beberapa rekomendasi nutrisi untuk Si Buah Hati</string>
    <string name="desc_menu_3">Kami mengundang para Ibu untuk berbagi pengalaman dan saling mengedukasi lewat Forum</string>
    <string name="desc_menu_4">Sertifikat yang membuktikan pengetahuan fundamental beserta keterampilan nyata yang diinginkan perusahaan global.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="retry">Coba lagi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_home">Home</string>
    <string name="title_artikel">Artikel</string>
    <string name="title_forum">Forum</string>
    <string name="title_profile">Profile</string>
    <string name="descmainlogo1">SIGIZI</string>
    <string name="descmainlogo2">Mari Cegah Stunting pada Anak</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Stunting pada anak 2 bulan</string>
    <string name="content_description_media">Image</string>
    <string name="secondary_text">anak saya sudah stunting dan terkadang tidak nafsu makan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="intro_title">Selamat Datang di Aplikasi siGizi!</string>
    <string name="intro_text">Kami senang Anda bergabung dalam upaya meningkatkan kesehatan dan gizi keluarga. Yuk isi pertanyaan berikut</string>
    <string name="intro_start">Ayo!</string>
    <string name="pertanyaan2">Apakah anak Anda mengalami pertumbuhan yang lambat dibandingkan anak-anak seusianya?</string>
    <string name="pertanyaan3">Apakah tinggi badan anak Anda lebih rendah dari rata-rata anak seusianya?</string>
    <string name="pertanyaan4">Bagaimana pola makan anak Anda sehari-hari? (Pilih semua yang sesuai)</string>
    <string name="makanan1">Cukup protein (daging, ikan, telur)</string>
    <string name="makanan2">Cukup sayur dan buah</string>
    <string name="makanan3">Banyak karbohidrat (nasi, roti)</string>
    <string name="makanan4">Kurang bervariasi</string>
    <string name="pertanyaan5">Apakah anak Anda mendapatkan ASI eksklusif selama 6 bulan pertama?</string>
    <string name="pertanyaan6">Seberapa sering anak Anda mengalami sakit (seperti diare, infeksi saluran pernapasan) dalam 6 bulan terakhir?</string>
    <string name="sering">Sangat sering</string>
    <string name="sering1">Cukup sering</string>
    <string name="sering2">Jarang</string>
    <string name="sering3">Tidak Pernah</string>
    <string name="names">Siapakah nama anak anda?</string>
    <string name="name1">nama lengkan atau nama panggilan</string>
    <string name="laki">Laki-Laki</string>
    <string name="cewek">Perempuan</string>
    <string name="gender">Jenis kelamin</string>
    <string name="gender1">Jenis kelamin anak anda?</string>
    <string name="umur">Berapa umur anak anda?</string>
    <string name="umur1">Umur dalam bentuk bulan</string>
    <string name="beratbadan">Berat badan anak?</string>
    <string name="how_fat_question_text" />
    <string name="how_fat_min">2</string>
    <string name="how_fat_max">13</string>
    <string name="lingkarkepala">Lingkar Kepala anak?</string>
    <string name="min">33</string>
    <string name="max">50</string>
    <string name="tinggibadan">Tinggi anak?</string>
    <string name="mins">33</string>
    <string name="maxs">50</string>
    <string name="finish_question_title">Sudah Selesai Terimakasih</string>
    <string name="finish_question_text">Silahkan klik Selanjutnya untuk memasukkan data ya</string>
    <string name="finish_question_submit">Selanjutnya </string>
    <string-array name="list_umur_bayi">
        <item>Umur 0 - 5 bulan</item>
        <item>Umur 6 - 11 bulan</item>
        <item>Umur 12 - 17 bulan</item>
        <item>Umur 18 - 23 bulan</item>
        <item>Umur 24 - 29 bulan</item>
        <item>Umur 30 - 35 bulan</item>
    </string-array>
    <string-array name="jenis_nutrisi">
        <item>Energi: 550 kkal/hari.
            Protein: 9 gram/hari.
            Lemak total: 31 gram/hari.
            Air: 700 ml/hari.
            Vitamin A: 375 RE/hari.
            Vitamin D: 10 mcg/hari.
            Vitamin E: 4 mcg/hari.
            Vitamin K: 5 mcg/hari.
            Folat: 80 mcg/hari.
            Kalsium: 200 mg/hari.
            Fosfor: 100 mg/hari.
            Zat Besi: 0,3 mg/hari.
            Seng: 1,1 mg/hari.</item>
        <item>Energi: 800 kkal/hari.
            Protein: 15 gram/hari.
            Lemak total: 35 gram/hari.
            Air: 900 ml/hari.
            Vitamin A: 400 RE/hari.
            Vitamin D: 10 mcg/hari.
            Vitamin E: 5 mcg/hari.
            Vitamin K: 10 mcg/hari.
            Folat: 80 mcg/hari.
            Kalsium: 270 mg/hari.
            Fosfor: 275 mg/hari.
            Zat Besi: 11 mg/hari.
            Seng: 3 mg/hari.</item>
        <item>Energi: Sekitar 1000 kkal/hari.
            Protein: Sekitar 13 gram/hari.
            Lemak: Sekitar 40 gram/hari, dengan penekanan pada lemak sehat seperti omega-3 dan omega-6.
            Karbohidrat: Sekitar 130 gram/hari.
            Serat: Sekitar 19 gram/hari.
            Air: Sekitar 1.3 liter/hari.
            Vitamin A: 300 mcg/hari.
            Vitamin D: 10 mcg/hari.
            Vitamin E: 6 mg/hari.
            Vitamin K: 30 mcg/hari.
            Folat: 80 mcg/hari.
            Kalsium: 700 mg/hari.
            Fosfor: 460 mg/hari.
            Zat Besi: 7 mg/hari.
            Seng: 3 mg/hari.</item>
        <item>Energi: 1350 kkal/hari
            Protein: 15 g/hari
            Lemak total: 35 g/hari
            Omega 3: 0,5 g/hari
            Omega 6: 4,4 g/hari
            Karbohidrat: 105 g/hari
            Serat: 11 g/hari
            Air: 900 ml/hari
            Vitamin A: 400 RE/hari
            Vitamin B1 (Thiamin): 0,3 mg/hari
            Vitamin B2 (Riboflavin): 0,4 mg/hari
            Vitamin B3 (Niasin): 4 mg/hari
            Vitamin B5 (Asam Pantotenat): 1,8 mg/hari
            Vitamin B6: 0,3 mg/hari
            Asam Folat: 80 mcg/hari
            Vitamin B12: 1,5 mcg/hari
            Biotin: 6 mcg/hari
            Kolin: 150 mg/hari
            Vitamin C: 50 mg/hari
            Vitamin D: 10 mcg/hari
            Vitamin E: 5 mcg/hari
            Vitamin K: 10 mcg/hari</item>
        <item>Energi: Sekitar 1000-1400 kkal/hari
            Protein: 13-15 g/hari
            Lemak: 35-40 g/hari
            Karbohidrat: 100-140 g/hari
            Serat: 19 g/hari
            Air: 1300 ml/hari
            Vitamin A: 300-400 RE/hari
            Vitamin B1 (Thiamin): 0,5 mg/hari
            Vitamin B2 (Riboflavin): 0,5 mg/hari
            Vitamin B3 (Niasin): 6 mg/hari
            Vitamin B6: 0,5 mg/hari
            Vitamin B12: 0,9 mcg/hari
            Vitamin C: 15 mg/hari
            Vitamin D: 5 mcg/hari
            Vitamin E: 6 mg/hari
            Vitamin K: 30 mcg/hari
            Kalsium: 700 mg/hari
            Zat Besi: 7 mg/hari
            Zink: 3 mg/hari</item>
        <item>Energi: Sekitar 1100-1400 kkal/hari
            Protein: 13-15 g/hari
            Lemak: 35-40 g/hari
            Karbohidrat: 100-140 g/hari
            Serat: 19 g/hari
            Air: 1300 ml/hari
            Vitamin A: 300-400 RE/hari
            Vitamin B1 (Thiamin): 0,5 mg/hari
            Vitamin B2 (Riboflavin): 0,5 mg/hari
            Vitamin B3 (Niasin): 6 mg/hari
            Vitamin B6: 0,5 mg/hari
            Vitamin B12: 0,9 mcg/hari
            Vitamin C: 15 mg/hari
            Vitamin D: 5 mcg/hari
            Vitamin E: 6 mg/hari
            Vitamin K: 30 mcg/hari
            Kalsium: 700 mg/hari
            Zat Besi: 7 mg/hari
            Zink: 3 mg/hari</item>
    </string-array>
</resources>