<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="120dp">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/content_description_media"
                app:srcCompat="@drawable/stunting" />

            <LinearLayout
                android:id="@+id/layoutuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/namebg"
                android:orientation="horizontal"
                android:padding="2dp">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="1dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ibu"
                    app:riv_corner_radius="30dp" />

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="8sp" />
            </LinearLayout>
        </FrameLayout>

        <!-- Title, secondary and supporting text -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:background="@drawable/bg_3"
            android:padding="16dp">

            <TextView
                android:id="@+id/judul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <TextView
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/secondary_text"
                android:maxLines="2"
            android:ellipsize="end"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/secondprimary"
                android:padding="0dp"
                android:textColor="@color/white"
                app:icon="@drawable/heart_icon"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/white" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/commenButton"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:backgroundTint="@color/secondprimary"
                android:padding="0dp"
                android:textColor="@color/white"
                app:icon="@drawable/blogger"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/white" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
